Fetch Allボタンを追加しました

--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,6 @@
         var data=results.get("text");
         var update = results.get("updateDate");
         $("#message").html(data + ":" + update);
-        
     })
     }
     </script>
@@ -52,6 +51,7 @@
     <button id="btnA" class="btn" onclick="register()">Register</button>
     
     <button id="btnB" class="btn" onclick = "fetch()">Fetch</button>
+    <button id="btnC" class="btn">Fetch All</button>
   </div>
   <div id="message">message area</div>
 </body>
